--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<html>
+<h1> Zen Garden and The Art of CSS</h1>
+<body>
+<p>
+    The most interesting thing about the Zen Garden is that the html code of the site is fairly basic, and the CSS gives the site a somewhat unsophistocated look. The most interesting part about the Zen Garden is that with every person's different CSS file input, the site looks drastically different. The CSS is what makes each person's version truly unique. 
+</p>
+    
+    
+<p>
+    My favorite CSS design in the Zen Garden was "Steel" by Steffen Knoeller because the items move like mechanical contraptions and the black and white color scheme makes the words pop out and it also makes it much easier to read. I also thought it was interesting how he arranged his layout to put the text in boxes that look like they are made out of steel. 
+</p>
+<p>    
+   Overall, I thought it was cool how each person's CSS made the webpage look unique.
+</p>
 
+</body>
+</html> 
